===============
Stalker Changes
===============

0.2.20
======

* **New:** Added ``goods`` attribute to the ``Client`` class. To allow special
  priced ``Goods`` to be created for individual clients.

0.2.19
======

* **Update:** Updated the ``stalker.config.Config.database_engine_settings`` to
  point the test database.

* **Fix:** Fixed a bug in ``stalker.testing.UnitTestDBBase.setUp()`` where it
  was not considering the existence of the ``STALKER_PATH`` environment
  variable while doing the tests.

* **Update:** Removed debug message from ``db.setup()`` which was revealing the
  database password.

* **Update:** Updated the ``UnitTestDBBase``, it now creates its own test
  database, which allows all the tests to run in an individual database. Thus,
  the tests can now be run in ``multiprocess`` mode which speeds things a lot.

* **Fix:** Removed any module level imports of ``stalker.defaults`` variable,
  which can be changed by a Studio (or by tests) and should always be
  refreshed.

* **Update:** Removed the module level import of the
  ``stalker.db.session.DBSession`` in ``stalker.db``, so it is not possible to
  use ``db.DBSession`` anymore.

* **Update:** The import statements that imports ``stalker.defaults`` moved to
  local scopes to allow runtime changes to the ``defaults`` to be reflected
  correctly.

* **Update:** Added Python fall back mode to
  ``stalker.shot.Shot._check_code_availability()`` which runs when there is no
  database.

* **Update:** ``stalker.models.task.TimeLog._validate_task()`` is now getting
  the ``Status`` instances from the ``StatusList`` that is attached to the
  ``Task`` instance instead of doing a database query.

* **Update:** ``stalker.models.task.TimeLog._validate_resource()`` is now
  falling back to a Python implementation if there is no database connection.

* **Update:** ``stalker.models.task.Task._total_logged_seconds_getter()`` is
  now hundreds of times faster when there is a lot of ``TimeLog`` instances