@@ -23,7 +23,7 @@ import datetime
 from math import ceil
 
 from sqlalchemy import (Column, Integer, ForeignKey, Interval, Boolean,
-                        DateTime, PickleType)
+                        DateTime, Text, JSON)
 from sqlalchemy.orm import validates, relationship, synonym, reconstructor
 
 from stalker import log
@@ -150,7 +150,7 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
         doc='The User who has last scheduled the Studio projects'
     )
     last_schedule_message = Column(
-        PickleType,  # TODO: Why this is PickleType??? Why not use String instead
+        Text,
         doc='Holds the last schedule message, generally coming generated by '
         'TaskJuggler'
     )
@@ -530,7 +530,7 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
         return timing_resolution
 
 
-class WorkingHours(object):
+class WorkingHours(Entity):
     """A helper class to manage Studio working hours.
 
     Working hours is a data class to store the weekly working hours pattern of
@@ -586,16 +586,28 @@ class WorkingHours(object):
       value is going to be used.
     """
 
+    __auto_name__ = True
+    __tablename__ = 'WorkingHours'
+    __mapper_args__ = {'polymorphic_identity': 'WorkingHours'}
+
+    working_hours_id = \
+        Column('id', Integer, ForeignKey('Entities.id'), primary_key=True)
+
+    working_hours = Column(JSON)
+
+    # I know it is not a very common place to import modules
+    from stalker import defaults
+    daily_working_hours = Column(Integer, default=defaults.daily_working_hours)
+
     def __init__(self,
                  working_hours=None,
                  daily_working_hours=None,
                  **kwargs):
+        super(WorkingHours, self).__init__(**kwargs)
         if working_hours is None:
             from stalker import defaults
             working_hours = defaults.working_hours
-        self._wh = None
-        self.working_hours = self._validate_working_hours(working_hours)
-        self._daily_working_hours = None
+        self.working_hours = working_hours
         self.daily_working_hours = daily_working_hours
 
     def __eq__(self, other):
@@ -604,24 +616,19 @@ class WorkingHours(object):
         return isinstance(other, WorkingHours) and \
             other.working_hours == self.working_hours
 
-    def __hash__(self):
-        """the overridden __hash__ method
-        """
-        return hash(self.working_hours)
-
     def __getitem__(self, item):
         from stalker import __string_types__
         if isinstance(item, int):
             from stalker import defaults
-            return self._wh[defaults.day_order[item]]
+            return self.working_hours[defaults.day_order[item]]
         elif isinstance(item, __string_types__):
-            return self._wh[item]
+            return self.working_hours[item]
 
     def __setitem__(self, key, value):
         self._validate_wh_value(value)
         from stalker import __string_types__, defaults
         if isinstance(key, int):
-            self._wh[defaults.day_order[key]] = value
+            self.working_hours[defaults.day_order[key]] = value
         elif isinstance(key, __string_types__):
             # check if key is in
             if key not in defaults.day_order:
@@ -629,9 +636,10 @@ class WorkingHours(object):
                     "%s accepts only %s as key, not '%s'" %
                     (self.__class__.__name__, defaults.day_order, key)
                 )
-            self._wh[key] = value
+            self.working_hours[key] = value
 
-    def _validate_working_hours(self, wh_in):
+    @validates('working_hours')
+    def _validate_working_hours(self, key, wh_in):
         """validates the given working hours
         """
         if not isinstance(wh_in, dict):
@@ -661,18 +669,6 @@ class WorkingHours(object):
         wh_def.update(wh_in)
 
         return wh_def
-
-    @property
-    def working_hours(self):
-        """the getter of _wh
-        """
-        return self._wh
-
-    @working_hours.setter
-    def working_hours(self, wh_in):
-        """the setter of _wh
-        """
-        self._wh = self._validate_working_hours(wh_in)
 
     def is_working_hour(self, check_for_date):
         """checks if the given datetime is in working hours
@@ -767,7 +763,8 @@ class WorkingHours(object):
         """
         return int(ceil(self.weekly_working_days * 52.1428))
 
-    def _validate_daily_working_hours(self, dwh):
+    @validates('daily_working_hours')
+    def _validate_daily_working_hours(self, key, dwh):
         """validates the given daily working hours value
         """
         if dwh is None:
@@ -787,18 +784,6 @@ class WorkingHours(object):
                 self.__class__.__name__
             )
         return dwh
-
-    @property
-    def daily_working_hours(self):
-        """getter for daily_working_hours attribute
-        """
-        return self._daily_working_hours
-
-    @daily_working_hours.setter
-    def daily_working_hours(self, dwh):
-        """setter for daily_working_hours attribute
-        """
-        self._daily_working_hours = self._validate_daily_working_hours(dwh)
 
     def split_in_to_working_hours(self, start, end):
         """splits the given start and end datetime objects in to working hours
